--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "project",
   "dependencies": {
+    "html-entities": "^2.4.0",
+    "nanoid": "^3.1.28",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "nanoid": "3.1.28",
-    "html-entities": "2.4.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "webpack": "^2.0",
     "babel-core": "^6.0",
     "babel-loader": "^7.0",
     "babel-preset-env": "*",
-    "babel-preset-react": "*"
+    "babel-preset-react": "*",
+    "webpack": "^2.0"
   },
   "scripts": {
     "build": "webpack",
